# t1

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  local.env  nginx.conf  pyproject.toml  todo.md
.db/: .project  local.env
.db/.dbeaver/: .credentials-config.json.bak  .data-sources.json.bak  credentials-config.json  (+2 more)
backend/: .env.example  Dockerfile  Makefile  docker-compose.yaml  nginx.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07f56eae24b7_initial.py  366ccc21acb2_initial.py  44bcf4317986_added_salary.py  8a728645b7b9_.py  95fa9e9624d5_vacancy_fields.py  96495df9ff1f_vacancies.py  9a2e09095721_updated_vacancy.py  9c06dfabe431_candidate_changes.py  a40b9ab737f0_initial.py  dc870f149407_roadmap.py  f4bc1e54902e_vacancy_salary.py
backend/notebooks/: candidates.ipynb  hh.ipynb  parse.ipynb  parser.ipynb
backend/scripts/: upload_candidates.py
backend/src/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
backend/src/auth/: models.py  router.py  schemas.py  service.py
backend/src/email/: config.py  dependencies.py  service.py
backend/src/hr/: config.py  models.py  router.py  schemas.py  service.py
backend/src/hr/candidate/: schemas.py
backend/src/hr/vacancy/: schemas.py
backend/templates/email/: recovery.jinja2.html
frontend/: .eslintrc.cjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
notebooks/: hh.ipynb  llm.ipynb
src/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  worker.py
(+73 files in other folders)
