[tool.poetry]
name = "t1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.114.2"}
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
greenlet = "^3.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pyotp = "^2.9.0"
celery = {extras = ["redis"], version = "^5.4.0"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pytest-black = "^0.3.12"
black = "^24.8.0"
alembic = "^1.13.2"
bcrypt = "^4.2.0"
ipykernel = "^6.29.5"
pydantic = "^2.9.2"
httpx-ws = "^0.6.0"
httpx-sse = "^0.4.0"
isort = "^5.13.2"
pylint = "^3.3.1"
sqlalchemy2-stubs = "^0.0.2a38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
